# bilibili-extractor-cli

./: Cargo.toml  README.md
.github/workflows/: clippy.yml
src/: error_handling.rs  main.rs  text_code.rs
