[package]
name = "bilibili-extractor-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bilibili-extractor = { version = "0.1.0", git = "https://github.com/nanashi-1/bilibili-extractor" }
clap = { version = "4.3.1", features = ["derive"] }
colored = "2.0.0"
